code works, residuals too big... won't run... oomph error

--- a/.deps/one_d_act_inhibit.Po
+++ b/.deps/one_d_act_inhibit.Po
@@ -263,7 +263,7 @@ one_d_act_inhibit.o: one_d_act_inhibit.cc \
   /Users/hollybarker/Documents/oomphlib/trunk/build/include/generic/stacktrace.h \
   /usr/include/execinfo.h \
   /Users/hollybarker/Documents/oomphlib/trunk/build/include/meshes/one_d_mesh.h \
-  flux_elements.h
+  flux_elements.h bulk_elements.cc bulk_elements.h
 
 /Users/hollybarker/Documents/oomphlib/trunk/build/include/generic.h:
 
@@ -910,3 +910,7 @@ one_d_act_inhibit.o: one_d_act_inhibit.cc \
 /Users/hollybarker/Documents/oomphlib/trunk/build/include/meshes/one_d_mesh.h:
 
 flux_elements.h:
+
+bulk_elements.cc:
+
+bulk_elements.h:
